# concourse-slack-notifier

./: .travis.yml  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
src/: concourse.rs  main.rs  message.rs
