[package]
name = "concourse-slack-notifier"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.10"
concourse-resource = "0.1"
slack_push = { git = "https://github.com/mockersf/slack-push" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
urlencoding = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
